--- a/src/core/templates/core/confirmacion.html
+++ b/src/core/templates/core/confirmacion.html
@@ -3,5 +3,6 @@
 
 {% block content %}
     <h1>La Informacion a sido Enviada con Exito</h1>
+    <a href="{% url 'core:menu' %}"><button>Menu</button></a>
     <img src="{% static 'afirmativo.png' %}" height="300px">
 {% endblock content %}
