--- a/src/core/static/style.css
+++ b/src/core/static/style.css
@@ -39,7 +39,7 @@ hr {
 
 footer {
     margin-top: 30px;
-    height: 175px;
+    height: 145px;
     font-size: 20px;
     background-color: darkslategray;
     color: white;
@@ -77,6 +77,7 @@ div p {
     border-color: turquoise;
     border-radius: 14px;
     border-style: groove;
+    margin-bottom: 2.5rem;
 }
 
 @media (max-width: 450px) {
@@ -86,14 +87,23 @@ div p {
         height: 370px;
     }
     header img {
-        max-width: 20rem;
+        max-width: 19rem;
     }
 
     footer {
         margin-top: 30px;
-        height: 220px;
+        height: 190px;
         font-size: 20px;
         background-color: darkslategray;
         color: white;
     }
+
+    .menu {
+    background-color: lightpink;
+    border: 4px;
+    border-color: turquoise;
+    border-radius: 14px;
+    border-style: groove;
+    margin-bottom: 2.5rem;
+}
 }
