--- a/src/core/templates/core/login.html
+++ b/src/core/templates/core/login.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <h1>Inicio de sesion</h1>
+    <h1 style="text-decoration: underline blue;">Inicio de sesion</h1>
     <h3>Ingrese sus Datos para Continuar</h3>
     {% for message in messages %}
         <p>{{message}}</p>
