--- a/src/core/templates/core/confirmacion.html
+++ b/src/core/templates/core/confirmacion.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <h1>La Informacion a sido Enviada con Exito</h1>
+    <h1>El Menu a Sido Actualizado con Exíto</h1>
     <a href="{% url 'core:menu' %}"><button>Menu</button></a>
+    <br>
     <img src="{% static 'afirmativo.png' %}" height="300px">
 {% endblock content %}
