--- a/src/core/templates/core/logout.html
+++ b/src/core/templates/core/logout.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     <h1>Has cerrado sesion</h1>
-    <img src="{% static 'auto.jpg' %}" height="300px">
-    <h3>Vuelva Pronto</h3>
+    <a href="{% url 'core:menu' %}"><button>Menu</button></a>
+    <br><br>
+    <img src="{% static 'auto.jpg' %}" style="max-height: 14rem;">
 {% endblock content %}
