--- a/src/core/templates/core/menu_list.html
+++ b/src/core/templates/core/menu_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Puedes Hacer Tu Pedido a Traves de Nuestro Grupo de Whatsapp</h1>
-    <a href="https//chat.whatsapp.com/Bf4zPhgf9Kh2SWD8tlw"><button>Ir a Whastapp</button></a>
+    <a href="https://chat.whatsapp.com/Bf4zP5BPhgf9Kh2SWD8tlw" target="_blank"><button>Ir a Whastapp</button></a>
     <br>
     <h1 style="text-decoration: underline turquoise;">Menu Del Dia</h1>
     <br>
